# aoc

./: .editorconfig  Cargo.toml  README.md  rustfmt.toml
.cargo/: config
benches/: bench.rs
proptest-regressions/: day3.txt
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
src/year2018/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs
src/year2018/day10/: letters.txt
