[package]
name = "aoc-2018"
version = "0.1.0"
authors = ["Naalunth <kevin-schier@web.de>"]

[lib]
bench = false

[dependencies]
aoc-runner = "0.1.0"
aoc-runner-derive = "0.1.3"
smallvec = "0.6.7"
chrono = "0.4.6"
rayon = "1.0.3"

[dependencies.nom]
version = "4.1.1"
features = []

[dev-dependencies]
proptest = "0.8.7"
