[package]
name = "aoc-naalunth"
version = "1.0.0"
authors = ["Naalunth <kevin-schier@web.de>"]
edition = "2018"

[lib]
bench = false

[profile.release]
panic = "abort"

[dependencies]
aoc-runner = "0.2.0"
aoc-runner-derive = "0.2.0"
smallvec = "0.6.7"
chrono = "0.4.6"
rayon = "1.0.0"
partition = "0.1.0"
nalgebra = "0.16.0"
itertools = "0.8.0"

[dependencies.nom]
version = "4.1.0"

[dependencies.ndarray]
git = "https://github.com/rust-ndarray/ndarray"
features = ["rayon"]

[dev-dependencies]
proptest = "0.8.7"
criterion = "0.2.5"

[[bench]]
name = "bench"
harness = false
